// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionTable should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxirZ kYeMxY"
    role="table"
  >
    <table
      class="table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                ID
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Date
              </div>
              <div
                class="flex items-center ml-2 text-theme-color-neutral"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top invisible"
            >
              <div>
                Type
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--3"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Recipient
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--4"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                Info
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--5"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                Status
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--6"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top justify-end"
            >
              <div>
                Amount
              </div>
              <div
                class="flex items-center ml-2 text-theme-color-neutral"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          class="border-b border-dotted border-theme-neutral-300"
          data-testid="TransactionRow"
        >
          <td
            class="w-16 py-6"
          >
            <div
              class="inline-block align-middle"
            >
              <a
                class="sc-AxheI bALhgA inline-flex items-center font-semibold cursor-pointer transition-colors duration-200 text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                data-testid="TransactionRow__ID"
                href=""
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  class="sc-AxjAm cpczEI flex-shrink-0 "
                  data-testid="Link__external"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </a>
            </div>
          </td>
          <td
            class="w-48 py-1 text-sm text-theme-neutral-600"
          >
            <span
              data-testid="TransactionRow__timestamp"
            >
              31 Jul 2020 16:34:41
            </span>
          </td>
          <td
            class="w-32"
          >
            <div
              class="flex items-center -space-x-1"
              data-testid="TransactionRowMode"
            >
              <div
                class="sc-AxhCb fwVCao border-theme-danger-contrast text-theme-danger"
              >
                <div
                  class="sc-AxjAm cpczEI"
                  data-testid="TransactionRowMode__Sent"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                    title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxhUy kMyssT text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                ASuusX…GQ3kqT
              </span>
            </div>
          </td>
          <td
            class="text-center"
          >
            <div
              class="inline-flex align-middle space-x-1"
              data-testid="TransactionRowInfo"
            >
              <span
                class="p-1"
              >
                <div
                  class="sc-AxjAm cpczEI"
                  data-testid="TransactionRowInfo__vendorField"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    smartbridge.svg
                  </svg>
                </div>
              </span>
            </div>
          </td>
          <td
            class="w-16 text-center"
          >
            <div
              class="inline-flex p-1 align-middle"
              data-testid="TransactionRowConfirmation"
            >
              <div
                class="sc-AxjAm cpczEI text-theme-warning"
                data-testid="TransactionRowConfirmation__pending"
                height="1em"
                width="1em"
              >
                <svg>
                  status-clock.svg
                </svg>
              </div>
            </div>
          </td>
          <td
            class="text-right"
          >
            <div
              class="sc-AxiKw BrXzA"
              color="danger"
              data-testid="TransactionRowAmount"
            >
              121.00000000
            </div>
          </td>
        </tr>
        <tr
          class="border-b border-dotted border-theme-neutral-300"
          data-testid="TransactionRow"
        >
          <td
            class="w-16 py-6"
          >
            <div
              class="inline-block align-middle"
            >
              <a
                class="sc-AxheI bALhgA inline-flex items-center font-semibold cursor-pointer transition-colors duration-200 text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                data-testid="TransactionRow__ID"
                href=""
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  class="sc-AxjAm cpczEI flex-shrink-0 "
                  data-testid="Link__external"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </a>
            </div>
          </td>
          <td
            class="w-48 py-1 text-sm text-theme-neutral-600"
          >
            <span
              data-testid="TransactionRow__timestamp"
            >
              31 Jul 2020 16:34:41
            </span>
          </td>
          <td
            class="w-32"
          >
            <div
              class="flex items-center -space-x-1"
              data-testid="TransactionRowMode"
            >
              <div
                class="sc-AxhCb fwVCao border-theme-danger-contrast text-theme-danger"
              >
                <div
                  class="sc-AxjAm cpczEI"
                  data-testid="TransactionRowMode__Sent"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                    title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxhUy kMyssT text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                ASuusX…GQ3kqT
              </span>
            </div>
          </td>
          <td
            class="text-center"
          >
            <div
              class="inline-flex align-middle space-x-1"
              data-testid="TransactionRowInfo"
            >
              <span
                class="p-1"
              >
                <div
                  class="sc-AxjAm cpczEI"
                  data-testid="TransactionRowInfo__multiSignature"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </span>
              <span
                class="p-1"
              >
                <div
                  class="sc-AxjAm cpczEI"
                  data-testid="TransactionRowInfo__vendorField"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    smartbridge.svg
                  </svg>
                </div>
              </span>
            </div>
          </td>
          <td
            class="w-16 text-center"
          >
            <div
              class="inline-flex p-1 align-middle"
              data-testid="TransactionRowConfirmation"
            >
              <div
                class="sc-AxjAm cpczEI text-theme-warning"
                data-testid="TransactionRowConfirmation__pending"
                height="1em"
                width="1em"
              >
                <svg>
                  status-clock.svg
                </svg>
              </div>
            </div>
          </td>
          <td
            class="text-right"
          >
            <div
              class="sc-AxiKw BrXzA"
              color="danger"
              data-testid="TransactionRowAmount"
            >
              52.20000000
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`TransactionTable should render compact 1`] = `
<DocumentFragment>
  <div
    class="sc-AxirZ kYeMxY"
    role="table"
  >
    <table
      class="table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top invisible"
            >
              <div>
                Type
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Recipient
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top justify-end"
            >
              <div>
                Amount
              </div>
              <div
                class="flex items-center ml-2 text-theme-color-neutral"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          class="border-b border-dotted border-theme-neutral-300"
          data-testid="TransactionCompactRow"
        >
          <td
            class="w-24 py-3"
          >
            <div
              class="flex items-center -space-x-1"
              data-testid="TransactionRowMode"
            >
              <div
                class="sc-AxhCb fwVCao border-theme-danger-contrast text-theme-danger"
              >
                <div
                  class="sc-AxjAm cpczEI"
                  data-testid="TransactionRowMode__Sent"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                    title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxhUy kMyssT text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                ASuusX…GQ3kqT
              </span>
            </div>
          </td>
          <td
            class="text-right"
          >
            <div
              class="sc-AxiKw BrXzA"
              color="danger"
              data-testid="TransactionRowAmount"
            >
              121.00000000
            </div>
          </td>
        </tr>
        <tr
          class="border-b border-dotted border-theme-neutral-300"
          data-testid="TransactionCompactRow"
        >
          <td
            class="w-24 py-3"
          >
            <div
              class="flex items-center -space-x-1"
              data-testid="TransactionRowMode"
            >
              <div
                class="sc-AxhCb fwVCao border-theme-danger-contrast text-theme-danger"
              >
                <div
                  class="sc-AxjAm cpczEI"
                  data-testid="TransactionRowMode__Sent"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                    title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxhUy kMyssT text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                ASuusX…GQ3kqT
              </span>
            </div>
          </td>
          <td
            class="text-right"
          >
            <div
              class="sc-AxiKw BrXzA"
              color="danger"
              data-testid="TransactionRowAmount"
            >
              52.20000000
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`TransactionTable should render with sign 1`] = `
<DocumentFragment>
  <div
    class="sc-AxirZ kYeMxY"
    role="table"
  >
    <table
      class="table-auto"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                ID
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Date
              </div>
              <div
                class="flex items-center ml-2 text-theme-color-neutral"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top invisible"
            >
              <div>
                Type
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--3"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top "
            >
              <div>
                Recipient
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--4"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                Info
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--5"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top justify-center"
            >
              <div>
                Status
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--6"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-inline align-top justify-end"
            >
              <div>
                Amount
              </div>
              <div
                class="flex items-center ml-2 text-theme-color-neutral"
                data-testid="table__Sort"
              >
                <div
                  class="sc-AxjAm hdgaLj"
                  height="12"
                  width="15"
                >
                  <svg>
                    sort.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="text-sm text-left select-none text-theme-neutral"
            colspan="1"
            data-testid="table__th--7"
            role="columnheader"
          >
            <div
              class="flex flex-inline align-top invisible"
            >
              <div>
                Sign
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          class="border-b border-dotted border-theme-neutral-300"
          data-testid="TransactionRow"
        >
          <td
            class="w-16 py-6"
          >
            <div
              class="inline-block align-middle"
            >
              <a
                class="sc-AxheI bALhgA inline-flex items-center font-semibold cursor-pointer transition-colors duration-200 text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                data-testid="TransactionRow__ID"
                href=""
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  class="sc-AxjAm cpczEI flex-shrink-0 "
                  data-testid="Link__external"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </a>
            </div>
          </td>
          <td
            class="w-48 py-1 text-sm text-theme-neutral-600"
          >
            <span
              data-testid="TransactionRow__timestamp"
            >
              31 Jul 2020 16:34:41
            </span>
          </td>
          <td
            class="w-32"
          >
            <div
              class="flex items-center -space-x-1"
              data-testid="TransactionRowMode"
            >
              <div
                class="sc-AxhCb fwVCao border-theme-danger-contrast text-theme-danger"
              >
                <div
                  class="sc-AxjAm cpczEI"
                  data-testid="TransactionRowMode__Sent"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                    title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxhUy kMyssT text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                ASuusX…GQ3kqT
              </span>
            </div>
          </td>
          <td
            class="text-center"
          >
            <div
              class="inline-flex align-middle space-x-1"
              data-testid="TransactionRowInfo"
            >
              <span
                class="p-1"
              >
                <div
                  class="sc-AxjAm cpczEI"
                  data-testid="TransactionRowInfo__vendorField"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    smartbridge.svg
                  </svg>
                </div>
              </span>
            </div>
          </td>
          <td
            class="w-16 text-center"
          >
            <div
              class="inline-flex p-1 align-middle"
              data-testid="TransactionRowConfirmation"
            >
              <div
                class="sc-AxjAm cpczEI text-theme-warning"
                data-testid="TransactionRowConfirmation__pending"
                height="1em"
                width="1em"
              >
                <svg>
                  status-clock.svg
                </svg>
              </div>
            </div>
          </td>
          <td
            class="text-right"
          >
            <div
              class="sc-AxiKw BrXzA"
              color="danger"
              data-testid="TransactionRowAmount"
            >
              121.00000000
            </div>
          </td>
          <td
            class="text-right"
          >
            <button
              class="sc-AxgMl fcsZQi"
              color="primary"
              data-testid="TransactionRow__sign"
              type="button"
            >
              <div
                class="sc-AxjAm cpczEI"
                height="1em"
                width="1em"
              >
                <svg>
                  edit.svg
                </svg>
              </div>
              <span>
                Sign
              </span>
            </button>
          </td>
        </tr>
        <tr
          class="border-b border-dotted border-theme-neutral-300"
          data-testid="TransactionRow"
        >
          <td
            class="w-16 py-6"
          >
            <div
              class="inline-block align-middle"
            >
              <a
                class="sc-AxheI bALhgA inline-flex items-center font-semibold cursor-pointer transition-colors duration-200 text-theme-primary hover:text-theme-primary-dark hover:underline active:text-theme-primary-500"
                data-testid="TransactionRow__ID"
                href=""
                rel="noopener noreferrer"
                target="_blank"
              >
                <div
                  class="sc-AxjAm cpczEI flex-shrink-0 "
                  data-testid="Link__external"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    redirect.svg
                  </svg>
                </div>
              </a>
            </div>
          </td>
          <td
            class="w-48 py-1 text-sm text-theme-neutral-600"
          >
            <span
              data-testid="TransactionRow__timestamp"
            >
              31 Jul 2020 16:34:41
            </span>
          </td>
          <td
            class="w-32"
          >
            <div
              class="flex items-center -space-x-1"
              data-testid="TransactionRowMode"
            >
              <div
                class="sc-AxhCb fwVCao border-theme-danger-contrast text-theme-danger"
              >
                <div
                  class="sc-AxjAm cpczEI"
                  data-testid="TransactionRowMode__Sent"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    sent.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 SBrFf"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                    title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </div>
          </td>
          <td>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxhUy kMyssT text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                ASuusX…GQ3kqT
              </span>
            </div>
          </td>
          <td
            class="text-center"
          >
            <div
              class="inline-flex align-middle space-x-1"
              data-testid="TransactionRowInfo"
            >
              <span
                class="p-1"
              >
                <div
                  class="sc-AxjAm cpczEI"
                  data-testid="TransactionRowInfo__multiSignature"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </span>
              <span
                class="p-1"
              >
                <div
                  class="sc-AxjAm cpczEI"
                  data-testid="TransactionRowInfo__vendorField"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    smartbridge.svg
                  </svg>
                </div>
              </span>
            </div>
          </td>
          <td
            class="w-16 text-center"
          >
            <div
              class="inline-flex p-1 align-middle"
              data-testid="TransactionRowConfirmation"
            >
              <div
                class="sc-AxjAm cpczEI text-theme-warning"
                data-testid="TransactionRowConfirmation__pending"
                height="1em"
                width="1em"
              >
                <svg>
                  status-clock.svg
                </svg>
              </div>
            </div>
          </td>
          <td
            class="text-right"
          >
            <div
              class="sc-AxiKw BrXzA"
              color="danger"
              data-testid="TransactionRowAmount"
            >
              52.20000000
            </div>
          </td>
          <td
            class="text-right"
          >
            <button
              class="sc-AxgMl fcsZQi"
              color="primary"
              data-testid="TransactionRow__sign"
              type="button"
            >
              <div
                class="sc-AxjAm cpczEI"
                height="1em"
                width="1em"
              >
                <svg>
                  edit.svg
                </svg>
              </div>
              <span>
                Sign
              </span>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
